--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
                             fillOpacity: 0,
                             stroke: true,
                             fill: true,
-                            color: 'black',
+                            color: 'rgba( 157, 157, 157, 1.00 )',
                             weight: 0.03
                         };
                     }
