--- a/index.html
+++ b/index.html
@@ -958,11 +958,11 @@
                 vectorTileLayerStyles: {
                     sliced: function(properties, zoom) {
                         return {
-                            fillColor: "#ff0000",
-                            fillOpacity: 0,
+                            fillColor: 'rgba( 197, 197, 197, 1.00 )',
+                            fillOpacity: 0.3,
                             stroke: true,
                             fill: true,
-                            color: 'rgba( 157, 157, 157, 1.00 )',
+                            color: 'black',
                             weight: 0.03
                         };
                     }
